buscando el error

--- a/views/productsHandlerWebSockets.handlebars
+++ b/views/productsHandlerWebSockets.handlebars
@@ -38,4 +38,4 @@
         </div>
     </div>
 <script src="/socket.io/socket.io.js" ></script>
-<script src="/productHandlerWebSockets.js"></script>
+<script src="../src/public/productHandlerWebSockets.js"></script>
