--- a/views/realTimeProducts.handlebars
+++ b/views/realTimeProducts.handlebars
@@ -13,4 +13,4 @@
     {{/each}}
 </div>
 <script src="/socket.io/socket.io.js" ></script>
-<script src="/realTimeProducts.js"></script>
+<script src="../realTimeProducts.js"></script>
