Resulto hasta login

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -5,4 +5,4 @@
        
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="../src/public/profile.js"></script>
+<script src="../profile.js"></script>
