--- a/views/productsHandlerWebSockets.handlebars
+++ b/views/productsHandlerWebSockets.handlebars
@@ -1,5 +1,5 @@
 <div>
-        <div class="realTimeProductsForm">
+        <div id="list-products" class="realTimeProductsForm">
             <h2>Gestión de productos</h2>
             <div>
                 <label for="productId">Id :</label>
