--- a/views/realTimeProducts.handlebars
+++ b/views/realTimeProducts.handlebars
@@ -1,5 +1,5 @@
 <h1>Listas de productos en tiempo real:</h1>
-<div id="productRealTimeList" class="productRealTimeList">
+<div id="list-products" class="productRealTimeList">
 
 {{#each products}}
         <div class="productRealTimeItem"> 
