--- a/views/private.handlebars
+++ b/views/private.handlebars
@@ -1,18 +1,43 @@
 <button class="botons" type="button" id="closeSession-btn">CERRAR SESION</button>
-<form id="formProduct">
-    <h2>PRIVATE VIEW</h2>
-    <input class="controls" type="text" name="title" id="title" placeholder="Ingrese Nombre del Producto" required>
-    <input class="controls" type="text" name="description" id="description" placeholder="Ingrese description" required>
-    <input class="controls" type="number" name="price" id="price" placeholder="Ingrese su precio" required>
-    <input class="controls" type="text" name="thumbnail" id="thumbnail" placeholder="Ingrese su imagen url" required>
-    <input class="controls" type="text" name="code" id="code" placeholder="Ingrese su code" required>
-    <input class="controls" type="number" name="stock" id="stock" placeholder="Ingrese su stock" required>
-    <button class="botons" type="submit" id="add-btn" >Registrar </button>
-    <h2> Para eliminar un producto:</h2>
-    <input class="controls" type="number" name="id-prod" id="id-prod" placeholder="Ingrese ID" >
-   <button class="botons" type="button" id="delete-btn">Eliminar</button>
+<div>
+        <div id="list-products" class="realTimeProductsForm">
+            <h2>Gestión de productos</h2>
+            <div>
+                <label for="productId">Id :</label>
+                <input id="productId" type="text">
+            </div>
+            <div>
+                <label for="title">Titulo:</label>
+                <input id="title" type="text">
+            </div>
+            <div>
+                <label for="description">Descripción:</label>
+                <input id="description" type="text">
+            </div>
+            <div>
+                <label for="code">Codigo:</label>
+                <input id="code" type="text">
+            </div>
+            <div>
+                <label for="price">Precio:</label>
+                <input id="price" type="text">
+            </div>
+            <div>
+                <label for="stock">Stock:</label>
+                <input id="stock" type="text">
+            </div>
+        
+            <div class="formButtons">
+                <button id="createProduct">Crear</button>
+                <button id="updateProduct">Actualizar</button>
+                <button id="deleteProduct">Borrar</button>     
+            </div>
 
-</form>
+            <div>
+                <p id="message"></p>
+            </div>
+        </div>
+    </div>
 <button class="botons" type="button" id="closeSession-btn">CERRAR SESION</button>
 
 <script src="/socket.io/socket.io.js"></script>
